# anonymous-bot

./: .env.example  .gitignore  pyproject.toml
bot/: __main__.py  config.py  formatting.py  stats.py
bot/agent/: history.py  loop.py  prompts.py
bot/handlers/: commands.py
bot/tools/: base.py  registry.py  search.py
indexer/: __main__.py  books.py  chunker.py  config.py  embeddings.py  store.py
indexer/loaders/: __init__.py  base.py  docx.py  epub.py  pdf.py  txt.py
shared/: qdrant.py
