[project]
name = "na-bot"
version = "0.1.0"
description = "Narcotics Anonymous literature assistant Telegram bot"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20,<4",
    "openai>=1.60",
    "qdrant-client>=1.13",
    "pydantic-settings>=2.7",
    "pymupdf>=1.25",
    "ebooklib>=0.18",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot", "indexer", "shared"]

[dependency-groups]
dev = [
    "ruff>=0.9",
]
